--- a/RocketLauncher/Info.plist
+++ b/RocketLauncher/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>App uses bluetooth to control a relay on an Adafruit nRF52 MCU Model Rocket Launcher Remote</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>App uses bluetooth to control a relay on an Adafruit nRF52 MCU Model Rocket Launcher Remote</string>
 </dict>
 </plist>
